--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,6 +13,7 @@ $font-path: "../assets/fonts";
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
 $background-color: #eeeeee;
+$list-background-color: #f6f6f6;
 
 // Named Color Variables
 // --------------------------------------------------
